Kubernetes/Storage/MinIO/yamls/ig-minio-operator.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-minio-operator-https-redirect
  namespace: minio-operator
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-minio-operator-security
  namespace: minio-operator
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-minio-operator-websecure
  namespace: minio-operator 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio-operator.domain.com`)
      services:
        - name: console
          port: 9090
            #          serversTransport: traefik-minio-operator-transport
      middlewares:
        - name: traefik-minio-operator-security
  tls:
    secretName: minio-operator-urbaman
    options:
      name: traefik-minio-operator-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-minio-operator-web
  namespace: minio-operator
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`minio-operator.domain.com`)
      services:
        - name: console
          port: 9090
      middlewares:
        - name: traefik-minio-operator-https-redirect
