Kubernetes/Storage/MinIO/yamls/ig-minio-tenant.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-minio-tenant-https-redirect
  namespace: minio
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-minio-tenant-security
  namespace: minio
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-minio-tenant-websecure
  namespace: minio 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio-tenant.domain.com`)
      services:
        - name: minio-tenant-console
          port: 9443
          serversTransport: traefik-minio-tenant-transport
      middlewares:
        - name: traefik-minio-tenant-security
  tls:
    secretName: minio-tenant-urbaman
    options:
      name: traefik-minio-tenant-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-minio-tenant-web
  namespace: minio
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`minio-tenant.domain.com`)
      services:
        - name: minio-tenant-console
          port: 9443
      middlewares:
        - name: traefik-minio-tenant-https-redirect
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-minioapi-https-redirect
  namespace: minio
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-minioapi-security
  namespace: minio
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-minioapi-websecure
  namespace: minio 
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio-s3.domain.com`)
      services:
        - name: minio
          port: 443
          serversTransport: traefik-minioapi-transport
      middlewares:
        - name: traefik-minioapi-security
  tls:
    secretName: minio-s3-urbaman
    options:
      name: traefik-minioapi-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-minioapi-web
  namespace: minio
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`minio-s3.domain.com`)
      services:
        - name: minio
          port: 443
      middlewares:
        - name: traefik-minioapi-https-redirect
